--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,1 +1,9 @@
-<p>main works!</p>
+<div>
+  <h1>Welcome to my playground</h1>
+  <p>
+    I wanted to put in practice what I have learned about Angular in different
+    courses. I was trying to come up with a project that would keep my interest
+    and I stumbled on a youtube video of someone making minesweeper. I figured
+    what better way to learn than building some simple games.
+  </p>
+</div>
