--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,1 +1,9 @@
-/*# sourceMappingURL=footer.component.css.map */
+a {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 0 0 1rem 0;
+  text-decoration: none;
+}/*# sourceMappingURL=footer.component.css.map */
