--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<a target="_blank" href="https://github.com/JuanManuelCamilo27"
+  >https://github.com/JuanManuelCamilo27</a
+>
