--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
   <a href="">Home</a>
-  <a href="">Game1</a>
+  <a routerLink="/minesweeper">Minesweeper</a>
   <a href="">Game2</a>
 </nav>
