--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,9 +1,11 @@
-a {
-  position: fixed;
-  bottom: 0;
+.footer-container {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 0 0 1rem 0;
+  text-align: center;
+  background-color: white;
+  border-top: 1px solid black;
+  padding-top: 1rem;
+}
+.footer-container a {
   text-decoration: none;
+  color: black;
 }/*# sourceMappingURL=footer.component.css.map */
