--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,5 @@
-<a target="_blank" href="https://github.com/JuanManuelCamilo27"
-  >https://github.com/JuanManuelCamilo27</a
->
+<div class="footer-container">
+  <a target="_blank" href="https://github.com/JuanManuelCamilo27"
+    >https://github.com/JuanManuelCamilo27</a
+  >
+</div>
