--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,9 +1,12 @@
-a {
-  position: fixed;
-  bottom: 0;
+.footer-container {
   width: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 0 0 1rem 0;
-  text-decoration: none;
+  text-align: center;
+  background-color: white;
+  border-top: 1px solid black;
+  padding-top: 1rem;
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
 }
