Created a settings component and imported it to the parent component. Also imported the board component there too.

--- a/src/app/components/minesweeper/minesweeper.component.html
+++ b/src/app/components/minesweeper/minesweeper.component.html
@@ -1,1 +1,4 @@
-<p>minesweeper works!</p>
+<div class="board-container">
+  <app-settings class="settings"></app-settings>
+  <app-board></app-board>
+</div>
