Cree el componente que va a contener mi proximo juego y le hice el routing

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
   <a href="">Home</a>
   <a routerLink="/minesweeper">Minesweeper</a>
-  <a href="">Game2</a>
+  <a routerLink="/memory">Memory Game</a>
 </nav>
