--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href="">Home</a>
-  <a routerLink="/minesweeper">Minesweeper</a>
-  <a routerLink="/memory">Memory Game</a>
+  <a routerLink="/home" routerLinkActive="active">Home</a>
+  <a routerLink="/minesweeper" routerLinkActive="active">Minesweeper</a>
+  <a routerLink="/memory" routerLinkActive="active">Memory Game</a>
 </nav>
