--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -1,9 +1,8 @@
 nav {
   border: 1px solid black;
-
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
   padding: 0.6rem 0;
 
   a {
@@ -11,5 +10,10 @@ nav {
     color: black;
     font-size: 1.3em;
     letter-spacing: 1px;
+    &.active {
+      background-color: rgb(90, 90, 90);
+      color: white;
+      border-radius: 2px;
+    }
   }
 }
