Created the simon component for my new game and added it to the navbar. Also I made the rounting

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -2,4 +2,5 @@
   <a routerLink="/home" routerLinkActive="active">Home</a>
   <a routerLink="/minesweeper" routerLinkActive="active">Minesweeper</a>
   <a routerLink="/memory" routerLinkActive="active">Memory Game</a>
+  <a routerLink="/simon" routerLinkActive="active"> Simon</a>
 </nav>
