--- a/src/app/components/simon/button/button.component.html
+++ b/src/app/components/simon/button/button.component.html
@@ -1,1 +1,6 @@
-<p>button works!</p>
+<button
+  class="color-button"
+  [ngClass]="{ active: active }"
+  class="{{ color }}"
+  (click)="onClick()"
+></button>
