Modified the texts in the main page

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,9 +1,38 @@
 <div>
-  <h1>Welcome to my playground</h1>
+  <h1>Welcome to My Game Development Portfolio</h1>
   <p>
-    I wanted to put in practice what I have learned about Angular in different
-    courses. I was trying to come up with a project that would keep my interest
-    and I stumbled on a youtube video of someone making minesweeper. I figured
-    what better way to learn than building some simple games.
+    Over the past few years, I've been diving into various programming courses,
+    but I recently realized I hadn't undertaken any projects on my own. That
+    realization led me to seek inspiration, and I stumbled upon a YouTube video
+    showcasing the development of a minesweeper game.
+  </p>
+  <p>
+    I thought to myself, what better way to apply my newfound knowledge than by
+    creating simple games? This portfolio is a collection of those projects,
+    born out of a desire to learn and grow as a developer.
+  </p>
+  <p>
+    Each game here represents a journey of planning the game mechanics and a
+    user-friendly interface, coding, and problem-solving. Let me show you the
+    biggest challenges I faced with each of the games:
+  </p>
+  <ul>
+    <li>
+      <strong>Minesweeper: </strong> Challenges included generating mines
+      randomly and managing the game's state effectively.
+    </li>
+    <li>
+      <strong>Memory Game: </strong> Challenges included implementing card
+      matching logic and designing clear visual cues.
+    </li>
+    <li>
+      <strong>Simon: </strong> Challenges included implementing the sequence
+      generation and user input logic. Designing clear visual and auditory
+      feedback was crucial for enhancing the player experience.
+    </li>
+  </ul>
+  <p>
+    Feel free to explore and play the games I've created. Your feedback is
+    always appreciated!
   </p>
 </div>
