--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -16,4 +16,9 @@ div {
     letter-spacing: 1px;
     text-align: center;
   }
+  ul {
+    line-height: 1.5rem;
+    padding: 0 15rem;
+    letter-spacing: 1px;
+  }
 }
