Responsive landing page

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -18,15 +18,15 @@
   </p>
   <ul>
     <li>
-      <strong>Minesweeper: </strong> Challenges included generating mines
+      <strong>• Minesweeper: </strong> Challenges included generating mines
       randomly and managing the game's state effectively.
     </li>
     <li>
-      <strong>Memory Game: </strong> Challenges included implementing card
+      <strong>• Memory Game: </strong> Challenges included implementing card
       matching logic and designing clear visual cues.
     </li>
     <li>
-      <strong>Simon: </strong> Challenges included implementing the sequence
+      <strong>• Simon: </strong> Challenges included implementing the sequence
       generation and user input logic. Designing clear visual and auditory
       feedback was crucial for enhancing the player experience.
     </li>
