--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,6 +1,14 @@
 <nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a>
-  <a routerLink="/minesweeper" routerLinkActive="active">Minesweeper</a>
-  <a routerLink="/memory" routerLinkActive="active">Memory Game</a>
-  <a routerLink="/simon" routerLinkActive="active"> Simon</a>
+  <ul>
+    <li class="material-symbols-outlined burger" (click)="toggleMenu()">
+      {{ isMenuOpen ? "close" : "menu" }}
+    </li>
+
+    <li class="menu" [class.is-open]="isMenuOpen" (click)="closeMenu()">
+      <a routerLink="/home" routerLinkActive="active">Home</a>
+      <a routerLink="/minesweeper" routerLinkActive="active">Minesweeper</a>
+      <a routerLink="/memory" routerLinkActive="active">Memory Game</a>
+      <a routerLink="/simon" routerLinkActive="active"> Simon</a>
+    </li>
+  </ul>
 </nav>
