--- a/src/app/components/memory/board/board.component.scss
+++ b/src/app/components/memory/board/board.component.scss
@@ -29,12 +29,35 @@
     background-color: rgb(90, 90, 90);
     p {
       font-size: 1.3em;
-      font-weight: 800;
+      font-weight: 600;
     }
     button {
       cursor: pointer;
       padding: 1rem 4rem;
       font-size: 1.3em;
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .scoreboard {
+    font-size: 0.9em;
+  }
+  .board {
+    .title {
+      font-size: 0.8em;
+    }
+    .cards {
+      margin: 1rem 0;
+    }
+    .gamemodeButton {
+      p {
+        font-size: 0.9em;
+      }
+      button {
+        font-size: 0.9em;
+        padding: 0.5rem 2rem;
+      }
     }
   }
 }
