--- a/src/app/components/memory/card/card.component.scss
+++ b/src/app/components/memory/card/card.component.scss
@@ -36,3 +36,27 @@
 .clicked {
   background-color: black;
 }
+
+@media screen and (max-width: 820px) {
+  .card {
+    width: 110px;
+    height: 110px;
+    border: 2px solid black;
+    img {
+      width: 110px;
+      height: 110px;
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .card {
+    width: 90px;
+    height: 90px;
+    border: 2px solid black;
+    img {
+      width: 90px;
+      height: 90px;
+    }
+  }
+}
