--- a/src/app/components/memory/components/game-over/game-over.component.scss
+++ b/src/app/components/memory/components/game-over/game-over.component.scss
@@ -9,11 +9,16 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   p {
-    font-size: 16px;
+    font-size: 1em;
     font-weight: bold;
   }
-  button {
-    cursor: pointer;
-    font-size: 1em;
+}
+
+@media screen and (max-width: 450px) {
+  .defeat-screen {
+    top: 10%;
+    p {
+      font-size: 0.8em;
+    }
   }
 }
