--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -2,16 +2,59 @@ div {
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 85vh;
 }
 div h1 {
   font-size: 3em;
   font-weight: 400;
   letter-spacing: 1px;
+  text-align: center;
 }
 div p {
   line-height: 1.5rem;
-  padding: 0 15rem;
+  padding: 0 5rem;
   letter-spacing: 1px;
   text-align: center;
+}
+div ul {
+  line-height: 1.5rem;
+  padding: 0 8rem;
+  letter-spacing: 1px;
+}
+div ul li {
+  list-style: none;
+}
+
+@media screen and (max-width: 850px) {
+  div h1 {
+    font-size: 2.5em;
+  }
+  div p {
+    font-size: 1em;
+    padding: 0 1rem;
+  }
+  div ul {
+    padding: 0 1rem;
+    text-align: left;
+    font-size: 1em;
+  }
+  div ul li {
+    margin-bottom: 1rem;
+  }
+}
+@media screen and (max-width: 450px) {
+  div h1 {
+    font-size: 2em;
+  }
+  div p {
+    font-size: 0.9em;
+    padding: 0 2rem;
+  }
+  div ul {
+    padding: 0 3rem;
+    text-align: left;
+    font-size: 0.9em;
+  }
+  div ul li {
+    margin-bottom: 1rem;
+  }
 }/*# sourceMappingURL=main.component.css.map */
