--- a/src/app/components/memory/card/card.component.css
+++ b/src/app/components/memory/card/card.component.css
@@ -35,4 +35,27 @@
 
 .clicked {
   background-color: black;
+}
+
+@media screen and (max-width: 820px) {
+  .card {
+    width: 110px;
+    height: 110px;
+    border: 2px solid black;
+  }
+  .card img {
+    width: 110px;
+    height: 110px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .card {
+    width: 90px;
+    height: 90px;
+    border: 2px solid black;
+  }
+  .card img {
+    width: 90px;
+    height: 90px;
+  }
 }/*# sourceMappingURL=card.component.css.map */
