--- a/src/app/components/memory/components/game-over/game-over.component.css
+++ b/src/app/components/memory/components/game-over/game-over.component.css
@@ -10,10 +10,15 @@
   z-index: 1000;
 }
 .defeat-screen p {
-  font-size: 16px;
+  font-size: 1em;
   font-weight: bold;
 }
-.defeat-screen button {
-  cursor: pointer;
-  font-size: 1em;
+
+@media screen and (max-width: 450px) {
+  .defeat-screen {
+    top: 10%;
+  }
+  .defeat-screen p {
+    font-size: 0.8em;
+  }
 }/*# sourceMappingURL=game-over.component.css.map */
