--- a/src/app/components/memory/components/result-message/result-message.component.css
+++ b/src/app/components/memory/components/result-message/result-message.component.css
@@ -26,4 +26,46 @@
 }
 .victory-screen .newGameButton:hover {
   background-color: rgb(100, 100, 100);
+}
+
+@media screen and (max-width: 820px) {
+  .victory-screen {
+    top: 35%;
+    left: 50%;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .victory-screen h1 {
+    font-size: 1.2em;
+  }
+  .victory-screen p {
+    font-size: 1em;
+  }
+  .victory-screen .newGameButton {
+    font-size: 1em;
+    padding: 0.5rem 0;
+    width: 50%;
+  }
+}
+@media screen and (max-width: 450px) {
+  .victory-screen {
+    top: 45%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+  }
+  .victory-screen h1 {
+    font-size: 0.8em;
+  }
+  .victory-screen p {
+    font-size: 0.8em;
+  }
+  .victory-screen .newGameButton {
+    font-size: 0.8em;
+    padding: 0.5rem 0;
+    width: 50%;
+  }
 }/*# sourceMappingURL=result-message.component.css.map */
