--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,18 +1,55 @@
-nav {
-  border: 1px solid black;
+nav ul {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
-  gap: 2rem;
-  padding: 0.6rem 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
-nav a {
+nav ul .burger {
+  display: none;
+  cursor: pointer;
+  line-height: 60px;
+}
+nav ul .menu {
+  display: flex;
+}
+nav ul .menu a {
+  padding: 0 10px;
+  height: 60px;
+  line-height: 60px;
   text-decoration: none;
-  color: black;
+  display: block;
   font-size: 1.3em;
-  letter-spacing: 1px;
+  color: black;
 }
-nav a.active {
+nav ul .menu a.active {
   background-color: rgb(90, 90, 90);
   color: white;
   border-radius: 2px;
+}
+
+@media screen and (max-width: 500px) {
+  nav ul {
+    display: flex;
+    justify-content: right;
+  }
+  nav ul .burger {
+    display: block;
+    font-size: 2em;
+    padding-right: 1rem;
+  }
+  nav ul .menu {
+    display: none;
+  }
+  nav ul .menu.is-open {
+    display: block;
+    position: absolute;
+    top: 62px;
+    background: #fff;
+    width: 100%;
+    z-index: 1;
+  }
+  nav ul .menu.is-open a {
+    border-bottom: 1px solid black;
+  }
 }/*# sourceMappingURL=nav.component.css.map */
