--- a/src/app/components/simon/button/button.component.css
+++ b/src/app/components/simon/button/button.component.css
@@ -57,4 +57,17 @@
 
 .color-button.yellow.active {
   opacity: 1;
+}
+
+@media screen and (max-width: 500px) {
+  .color-button {
+    width: 180px;
+    height: 180px;
+  }
+}
+@media screen and (max-width: 360px) {
+  .color-button {
+    width: 170px;
+    height: 170px;
+  }
 }/*# sourceMappingURL=button.component.css.map */
