--- a/src/app/components/memory/board/board.component.css
+++ b/src/app/components/memory/board/board.component.css
@@ -5,10 +5,6 @@
   border: 1px solid black;
 }
 
-.board {
-  display: flex;
-  flex-direction: column;
-}
 .board .title {
   display: flex;
   justify-content: center;
@@ -16,10 +12,10 @@
   background-color: rgb(90, 90, 90);
 }
 .board .cards {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 2rem 6rem;
+  display: grid;
+  grid-template-columns: repeat(6, minmax(min(2rem, 100%), 1fr));
+  gap: 1rem;
+  margin: 2rem 4rem;
 }
 .board .gamemodeButton {
   width: 100%;
@@ -39,15 +35,12 @@
   font-size: 1.3em;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1050px) {
   .scoreboard {
     font-size: 0.9em;
   }
   .board .title {
     font-size: 0.8em;
-  }
-  .board .cards {
-    margin: 1rem 0;
   }
   .board .gamemodeButton p {
     font-size: 0.9em;
@@ -55,5 +48,10 @@
   .board .gamemodeButton button {
     font-size: 0.9em;
     padding: 0.5rem 2rem;
+  }
+}
+@media screen and (max-width: 850px) {
+  .board .cards {
+    grid-template-columns: repeat(3, minmax(min(2rem, 100%), 1fr));
   }
 }/*# sourceMappingURL=board.component.css.map */
