--- a/src/app/components/memory/board/board.component.scss
+++ b/src/app/components/memory/board/board.component.scss
@@ -6,8 +6,6 @@
 }
 
 .board {
-  display: flex;
-  flex-direction: column;
   .title {
     display: flex;
     justify-content: center;
@@ -15,10 +13,10 @@
     background-color: rgb(90, 90, 90);
   }
   .cards {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: 2rem 6rem;
+    display: grid;
+    grid-template-columns: repeat(6, minmax(min(2rem, 100%), 1fr));
+    gap: 1rem;
+    margin: 2rem 4rem;
   }
   .gamemodeButton {
     width: 100%;
@@ -39,7 +37,7 @@
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1050px) {
   .scoreboard {
     font-size: 0.9em;
   }
@@ -48,7 +46,7 @@
       font-size: 0.8em;
     }
     .cards {
-      margin: 1rem 0;
+      //margin: 1rem 0;
     }
     .gamemodeButton {
       p {
@@ -58,6 +56,14 @@
         font-size: 0.9em;
         padding: 0.5rem 2rem;
       }
+    }
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .board {
+    .cards {
+      grid-template-columns: repeat(3, minmax(min(2rem, 100%), 1fr));
     }
   }
 }
