--- a/src/app/components/memory/card/card.component.css
+++ b/src/app/components/memory/card/card.component.css
@@ -4,9 +4,9 @@
   border: 5px solid black;
   border-radius: 10px;
   background-color: #454545;
-  margin: 5px;
   cursor: pointer;
   transition: transform 0.25s ease;
+  margin: auto;
 }
 .card:hover {
   background-color: rgb(19, 19, 19);
@@ -37,7 +37,7 @@
   background-color: black;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1050px) {
   .card {
     width: 110px;
     height: 110px;
@@ -48,14 +48,33 @@
     height: 110px;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 850px) {
   .card {
-    width: 90px;
-    height: 90px;
-    border: 2px solid black;
+    width: 140px;
+    height: 140px;
   }
   .card img {
-    width: 90px;
-    height: 90px;
+    width: 140px;
+    height: 140px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .card {
+    width: 100px;
+    height: 100px;
+  }
+  .card img {
+    width: 100px;
+    height: 100px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .card {
+    width: 60px;
+    height: 60px;
+  }
+  .card img {
+    width: 60px;
+    height: 60px;
   }
 }/*# sourceMappingURL=card.component.css.map */
