--- a/src/app/components/memory/card/card.component.scss
+++ b/src/app/components/memory/card/card.component.scss
@@ -4,9 +4,9 @@
   border: 5px solid black;
   border-radius: 10px;
   background-color: #454545;
-  margin: 5px;
   cursor: pointer;
   transition: transform 0.25s ease;
+  margin: auto;
   &:hover {
     background-color: rgb(19, 19, 19);
   }
@@ -37,7 +37,7 @@
   background-color: black;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1050px) {
   .card {
     width: 110px;
     height: 110px;
@@ -49,14 +49,35 @@
   }
 }
 
+@media screen and (max-width: 850px) {
+  .card {
+    width: 140px;
+    height: 140px;
+    img {
+      width: 140px;
+      height: 140px;
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .card {
+    width: 100px;
+    height: 100px;
+    img {
+      width: 100px;
+      height: 100px;
+    }
+  }
+}
+
 @media screen and (max-width: 450px) {
   .card {
-    width: 90px;
-    height: 90px;
-    border: 2px solid black;
+    width: 60px;
+    height: 60px;
     img {
-      width: 90px;
-      height: 90px;
+      width: 60px;
+      height: 60px;
     }
   }
 }
